# QuranRAG

./: .env.example  .gitignore  =0.2.2  LICENSE  README.md  pyproject.toml
data/eval/: benchmark_queries.json  embedding_benchmark.json
scripts/: 01_fetch_data.py  02_build_dataset.py  03_embed.py  04_benchmark.py  04_serve.py
src/: config.py
src/api/: __init__.py  app.py  routes.py  schemas.py
src/chunking/: __init__.py  pipeline.py  schemas.py  surah_summarizer.py  thematic_grouper.py  verse_chunker.py
src/data/: fetch_quran_api.py  fetch_quran_md.py  merge_dataset.py  parse_asbab.py  parse_morphology.py  schemas.py  scrape_ontology.py  validate_dataset.py
src/embedding/: __init__.py  base.py  bge_m3.py  factory.py  gemini_embedder.py  openai_embedder.py  swan_large.py
src/eval/: __init__.py  baselines.py  metrics.py  query_generator.py  report.py
src/mcp/: formatters.py  server.py
src/retrieval/: __init__.py  context_enricher.py  data_store.py  graph_retriever.py  hybrid_retriever.py  semantic_retriever.py
src/vectorstore/: __init__.py  base.py  qdrant_store.py
tests/: test_chunking.py  test_embedding.py  test_vectorstore.py
